@@ -1,0 +1,135 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "R. J. Mathar. Refractive index of humid air in the infrared: model fits, <a href=\"https://doi.org/10.1088/1464-4258/9/5/008\"><i>J. Opt. A: Pure Appl. Opt.</i> <b>9</b>, 470-476 (2007)</a><br>[<a href=\"https://github.com/polyanskiy/refractiveindex.info-scripts/blob/master/scripts/Mathar%202007%20-%20Air%201.3-2.5um.py\">Calculation script (Python)</a> - can be used for calculating refractive index of air at a given humidity, temperatire, and pressure"
+COMMENTS: "Dry air at 15 °C, 101.325 kPa, 370 ppm CO<sub>2</sub> content."
+DATA:
+  - type: tabulated n
+    data: |
+        1.30 1.000273570659
+        1.31 1.000273556727
+        1.32 1.000273543114
+        1.33 1.000273529809
+        1.34 1.000273516805
+        1.35 1.000273504092
+        1.36 1.000273491661
+        1.37 1.000273479504
+        1.38 1.000273467614
+        1.39 1.000273455982
+        1.40 1.000273444601
+        1.41 1.000273433464
+        1.42 1.000273422564
+        1.43 1.000273411893
+        1.44 1.000273401447
+        1.45 1.000273391217
+        1.46 1.000273381199
+        1.47 1.000273371387
+        1.48 1.000273361774
+        1.49 1.000273352355
+        1.50 1.000273343125
+        1.51 1.000273334079
+        1.52 1.000273325212
+        1.53 1.000273316519
+        1.54 1.000273307996
+        1.55 1.000273299637
+        1.56 1.000273291440
+        1.57 1.000273283399
+        1.58 1.000273275510
+        1.59 1.000273267770
+        1.60 1.000273260175
+        1.61 1.000273252721
+        1.62 1.000273245404
+        1.63 1.000273238222
+        1.64 1.000273231171
+        1.65 1.000273224247
+        1.66 1.000273217448
+        1.67 1.000273210770
+        1.68 1.000273204211
+        1.69 1.000273197768
+        1.70 1.000273191437
+        1.71 1.000273185217
+        1.72 1.000273179105
+        1.73 1.000273173098
+        1.74 1.000273167194
+        1.75 1.000273161390
+        1.76 1.000273155684
+        1.77 1.000273150074
+        1.78 1.000273144558
+        1.79 1.000273139134
+        1.80 1.000273133799
+        1.81 1.000273128552
+        1.82 1.000273123391
+        1.83 1.000273118314
+        1.84 1.000273113318
+        1.85 1.000273108403
+        1.86 1.000273103567
+        1.87 1.000273098807
+        1.88 1.000273094123
+        1.89 1.000273089513
+        1.90 1.000273084975
+        1.91 1.000273080507
+        1.92 1.000273076109
+        1.93 1.000273071778
+        1.94 1.000273067515
+        1.95 1.000273063316
+        1.96 1.000273059181
+        1.97 1.000273055109
+        1.98 1.000273051098
+        1.99 1.000273047147
+        2.00 1.000273043255
+        2.01 1.000273039421
+        2.02 1.000273035643
+        2.03 1.000273031922
+        2.04 1.000273028254
+        2.05 1.000273024641
+        2.06 1.000273021080
+        2.07 1.000273017570
+        2.08 1.000273014111
+        2.09 1.000273010701
+        2.10 1.000273007341
+        2.11 1.000273004028
+        2.12 1.000273000762
+        2.13 1.000272997542
+        2.14 1.000272994367
+        2.15 1.000272991237
+        2.16 1.000272988151
+        2.17 1.000272985107
+        2.18 1.000272982106
+        2.19 1.000272979146
+        2.20 1.000272976227
+        2.21 1.000272973347
+        2.22 1.000272970507
+        2.23 1.000272967706
+        2.24 1.000272964943
+        2.25 1.000272962216
+        2.26 1.000272959527
+        2.27 1.000272956874
+        2.28 1.000272954256
+        2.29 1.000272951673
+        2.30 1.000272949124
+        2.31 1.000272946609
+        2.32 1.000272944127
+        2.33 1.000272941678
+        2.34 1.000272939260
+        2.35 1.000272936875
+        2.36 1.000272934520
+        2.37 1.000272932196
+        2.38 1.000272929902
+        2.39 1.000272927638
+        2.40 1.000272925403
+        2.41 1.000272923196
+        2.42 1.000272921018
+        2.43 1.000272918868
+        2.44 1.000272916745
+        2.45 1.000272914648
+        2.46 1.000272912579
+        2.47 1.000272910535
+        2.48 1.000272908517
+        2.49 1.000272906525
+        2.50 1.000272904557
+SPECS:
+    n_is_absolute: true
+    λ_is_vacuum: true
+    temperature: 15 °C
+    pressure: 101325 Pa
