@@ -2,7 +2,7 @@
 # refractiveindex.info database is in the public domain
 # copyright and related rights waived via CC0 1.0
 
-REFERENCES: "R. J. Mathar. Refractive index of humid air in the infrared: model fits, <a href=\"https://doi.org/10.1088/1464-4258/9/5/008\"><i>J. Opt. A: Pure Appl. Opt.</i> <b>9</b>, 470-476 (2007)</a><br>[<a href=\"https://github.com/polyanskiy/refractiveindex.info-scripts/blob/master/scripts/Mathar%202007%20-%20Air%202.8-4.2um.py\">Calculation script (Python)</a> - this can be used for calculating refractive index of humid air]"
+REFERENCES: "R. J. Mathar. Refractive index of humid air in the infrared: model fits, <a href=\"https://doi.org/10.1088/1464-4258/9/5/008\"><i>J. Opt. A: Pure Appl. Opt.</i> <b>9</b>, 470-476 (2007)</a><br>[<a href=\"https://github.com/polyanskiy/refractiveindex.info-scripts/blob/master/scripts/Mathar%202007%20-%20Air%202.8-4.2um.py\">Calculation script (Python)</a> - can be used for calculating refractive index of air at a given humidity, temperatire, and pressure"
 COMMENTS: "Dry air at 15 °C, 101.325 kPa, 370 ppm CO<sub>2</sub> content."
 DATA:
   - type: tabulated n
